--- a/04_testui.ui
+++ b/04_testui.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>763</width>
-    <height>511</height>
+    <width>655</width>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>数据统计表</string>
   </property>
-  <widget class="QPlainTextEdit" name="myplaintext">
+  <widget class="QPlainTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
      <x>90</x>
      <y>30</y>
-     <width>481</width>
+     <width>491</width>
      <height>211</height>
     </rect>
    </property>
@@ -26,11 +26,11 @@
     <string>填入数据！</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="mybutton">
+  <widget class="QPushButton" name="button">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>330</y>
+     <x>270</x>
+     <y>270</y>
      <width>75</width>
      <height>23</height>
     </rect>
